--- a/index.html
+++ b/index.html
@@ -526,6 +526,8 @@
   integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
   crossorigin="anonymous"></script>
   <script src="../js/bgmenu.js"> </script>  
+  <script src="./js/bgmenu.js"> </script>  
     </body>
     
+</html>
 </html>
